# Quicken-Data-Processing

./: .gitignore  README.md  REQUIREMENTS.md  TODO.md  check_page_months.py  clear_reports.sh  csv_requirements copy.md  diagnose_pdf.py  pp_requirements.md  pyproject.toml  reports_config.yaml  run_quicken_report  test_charts.py  test_config.py  test_csv_parser.py  test_e2e.py  test_grouper.py  test_layout.py  test_parser.py
Instructions/: TODO.md  ai_instructions.md
src/quicken_parser/: __init__.py  charts.py  config.py  csv_parser.py  init.py  main.py  pdf_parser.py
src/quicken_parser/processors/: __init__.py  grouper.py
tests/: test_charts.py  test_config.py  test_csv_parser.py  test_e2e.py  test_grouper.py  test_tables.py
